--- a/static/css/main-page.css
+++ b/static/css/main-page.css
@@ -1,462 +1,507 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
 :root {
-	--body-color: #e4e9f7;
-	--sidebar-color: #fff;
-	--primary-color: #0079b5;
-	--primary-color-light: #00b6e3;
-	--toggle-color: #ddd;
-	--text-color: #707070;
-	--text-color-dark: #f6f5ff;
-	--grey: #545454;
-	--black: #000000;
-	--white: #fff;
+  --body-color: #e4e9f7;
+  --sidebar-color: #fff;
+  --primary-color: #0079b5;
+  --primary-color-light: #00b6e3;
+  --toggle-color: #ddd;
+  --text-color: #707070;
+  --text-color-dark: #f6f5ff;
+  --grey: #545454;
+  --black: #000000;
+  --white: #fff;
 
-
-	--tran-02: all 0.2s ease;
-	--tran-03: all 0.3s ease;
-	--tran-04: all 0.4s ease;
-	--tran-05: all 0.5s ease;
-
+  --tran-02: all 0.2s ease;
+  --tran-03: all 0.3s ease;
+  --tran-04: all 0.4s ease;
+  --tran-05: all 0.5s ease;
 }
 
-body{
-	height: 100vh;
-	background: var(--body-color);
-	transition: var(--tran-04);
+body {
+  height: 100vh;
+  background: var(--body-color);
+  transition: var(--tran-04);
 }
 
-body.dark{
-	--body-color: #00343c;
-	--sidebar-color: #242526;
-	--primary-color: #3a3b3c;
-	--primary-color-light: #3a3b3c;
-	--toggle-color: #fff;
-	--text-color: #ccc;
-	color: var(--white);
+body.dark {
+  --body-color: #00343c;
+  --sidebar-color: #242526;
+  --primary-color: #3a3b3c;
+  --primary-color-light: #3a3b3c;
+  --toggle-color: #fff;
+  --text-color: #ccc;
+  color: var(--white);
 }
 
-.sidebar{
-	position: fixed;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 250px;
-	background: var(--sidebar-color);
-	transition: var(--tran-05);
-	z-index: 100;
-	opacity: 1;
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 250px;
+  background: var(--sidebar-color);
+  transition: var(--tran-05);
+  z-index: 100;
+  opacity: 1;
 }
 
-.sidebar .text{
-	font-size: 16px;
-	font-weight: 500;
-	color: var(--text-color);
-	transition: var(--tran-03);
-	white-space: nowrap;
-	opacity: 1;
+.sidebar .text {
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--text-color);
+  transition: var(--tran-03);
+  white-space: nowrap;
+  opacity: 1;
 }
 
-.sidebar.close{
-	width: 93px;
-	opacity: 0.6;
+.sidebar.close {
+  width: 93px;
+  opacity: 0.6;
 }
 
-.sidebar.close .text{
-	opacity: 0;
+.sidebar.close .text {
+  opacity: 0;
 }
 
 .sidebar .image {
-	min-width: 60px;
-	display: flex;
-	align-items: center;
+  min-width: 60px;
+  display: flex;
+  align-items: center;
 }
 
-.sidebar li{
-	height: 60px;
-	list-style: none;
-	display: flex;
-	align-items: center;
+.sidebar li {
+  height: 60px;
+  list-style: none;
+  display: flex;
+  align-items: center;
 }
 
-.sidebar li.basic:first-child{
-	margin-top: 3vh;
-	margin-bottom: 3vh;
+.sidebar li.basic:first-child {
+  margin-top: 3vh;
+  margin-bottom: 3vh;
 }
 
-
-.sidebar li.basic:nth-child(5){
-	margin-top: 4vh;
+.sidebar li.basic:nth-child(5) {
+  margin-top: 4vh;
 }
 
-.sidebar li:first-child.basic .icon{
-	font-size: 2.7vh;
+.sidebar li:first-child.basic .icon {
+  font-size: 2.7vh;
 }
 
-.sidebar li .icon{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-size: 20px;
-	min-width: 60px;
+.sidebar li .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  min-width: 60px;
 }
 .sidebar li .text,
-.sidebar li .icon{
-	color: var(--text-color);
-	transition: var(--tran-02);
+.sidebar li .icon {
+  color: var(--text-color);
+  transition: var(--tran-02);
 }
 
-.sidebar header{
-	position: relative;
-	margin-top: 20px;
+.sidebar header {
+  position: relative;
+  margin-top: 20px;
 }
 
-.sidebar .image-text img{
-	width: 40px;
-	border-radius: 6px;
+.sidebar .image-text img {
+  width: 40px;
+  border-radius: 6px;
 }
 
-.sidebar header .image-text{
-	display: flex;
-	align-items: center;
+.sidebar header .image-text {
+  display: flex;
+  align-items: center;
 }
 
-header .image-text .header-text{
-	display: flex;
-	flex-direction: column;
+header .image-text .header-text {
+  display: flex;
+  flex-direction: column;
 }
 
-.header-text .name{
-	font-weight: bold;
-	font-variant: small-caps;
+.header-text .name {
+  font-weight: bold;
+  font-variant: small-caps;
 }
 
-.sidebar header .toggle{
-	position: absolute;
-	top: 50%;
-	right: -15px;
-	transform: translateY(-50%) rotate(180deg);
-	height: 25px;
-	width: 25px;
-	background: var(--grey);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 50%;
-	color: var(--sidebar-color);
-	font-size: 20px;
-	transition: var(--tran-05);
+.sidebar header .toggle {
+  position: absolute;
+  top: 50%;
+  right: -15px;
+  transform: translateY(-50%) rotate(180deg);
+  height: 25px;
+  width: 25px;
+  background: var(--grey);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: var(--sidebar-color);
+  font-size: 20px;
+  transition: var(--tran-05);
+  cursor: pointer;
 }
 
- .sidebar.close header .toggle{
-	transform: translateY(-50%);
+.sidebar.close header .toggle {
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
-body.dark .sidebar.close header .toggle{
-	transform: translateY(-50%);
+body.dark .sidebar.close header .toggle {
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
-body.dark .sidebar header .toggle{
-	transform: rotate(180deg);
-	color: var(--text-color);
+body.dark .sidebar header .toggle {
+  transform: rotate(180deg);
+  color: var(--text-color);
+  cursor: pointer;
 }
 
-.sidebar li a{
-	text-decoration: none;
-	height: 100%;
-	width: 100%;
-	display: flex;
-	align-items: center;
-	border-radius: 10px;
-	transition: var(--tran-04);
+.sidebar li a {
+  text-decoration: none;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  transition: var(--tran-04);
 }
 
-.sidebar li a:hover{
-	background: var(--grey);
+.sidebar li a:hover {
+  background: var(--grey);
 }
 
 .sidebar li a:hover .icon,
-.sidebar li a:hover .text{
-	color: var(--sidebar-color);
+.sidebar li a:hover .text {
+  color: var(--sidebar-color);
 }
 
 body.dark .sidebar li a:hover .icon,
-body.dark .sidebar li a:hover .text{
-	color: var(--text-color);
+body.dark .sidebar li a:hover .text {
+  color: var(--text-color);
 }
 
-.sidebar .menu-bar{
-	height: calc(100% - 50px);
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+.sidebar .menu-bar {
+  height: calc(100% - 50px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.menu-bar .mode{
-	border-radius: 25px;
-	position: relative;
+.menu-bar .mode {
+  border-radius: 25px;
+  position: relative;
 }
 
-.menu-bar .mode .moon-sun{
-	height: 50px;
-	width: 60px;
-	display: flex;
-	align-items: center;
+.menu-bar .mode .moon-sun {
+  height: 50px;
+  width: 60px;
+  display: flex;
+  align-items: center;
 }
 
-.menu-bar .mode i{
-	position: absolute;
-	border-radius: 6px;
-	transition: var(--tran-04);
+.menu-bar .mode i {
+  position: absolute;
+  border-radius: 6px;
+  transition: var(--tran-04);
 }
 
-.menu-bar .mode i.light{
-	opacity: 0;
+.menu-bar .mode i.light {
+  opacity: 0;
 }
 
-body.dark .menu-bar .mode i.light{
-	opacity: 1;
+body.dark .menu-bar .mode i.light {
+  opacity: 1;
 }
 
-body.dark .menu-bar .mode i.dark{
-	opacity: 0;
+body.dark .menu-bar .mode i.dark {
+  opacity: 0;
 }
 
-.menu-bar .mode .toggle-switch{
-	position: absolute;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
-	min-width: 60px;
-	cursor: pointer;
-	right: 15px;
+.menu-bar .mode .toggle-switch {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  min-width: 60px;
+  cursor: pointer;
+  right: 15px;
 }
 
-.toggle-switch .switch{
-	position: relative;
-	height: 22px;
-	width: 44px;
-	border-radius: 25px;
-	background: var(--toggle-color);
+.toggle-switch .switch {
+  position: relative;
+  height: 22px;
+  width: 44px;
+  border-radius: 25px;
+  background: var(--toggle-color);
 }
 
-.switch::before{
-	content: '';
-	position: absolute;
-	height: 15px;
-	width: 15px;
-	border-radius: 50%;
-	top: 50%;
-	left: 5px;
-	transform: translateY(-50%);
-	background: var(--sidebar-color);
-	transition: var(--tran-03);
+.switch::before {
+  content: "";
+  position: absolute;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  top: 50%;
+  left: 5px;
+  transform: translateY(-50%);
+  background: var(--sidebar-color);
+  transition: var(--tran-03);
 }
 
-body.dark .switch::before{
-	left: 2.5vh;
+body.dark .switch::before {
+  left: 2.5vh;
 }
 
-.home{
-	position: relative;
-	left: 25vh;
-	height: 100vh;
-	width: calc(100% - 25vh);
-	transition: var(--tran-05);
+.home {
+  position: relative;
+  left: 25vh;
+  height: 100vh;
+  width: calc(100% - 25vh);
+  transition: var(--tran-05);
 }
 
-.home .text{
-	color: var(--text-color);
+.home .text {
+  color: var(--text-color);
 }
 
-.sidebar.close ~ .home{
-	left: 9.2vh;
-	width: calc(100% - 9.2vh);
+.sidebar.close ~ .home {
+  left: 9.2vh;
+  width: calc(100% - 9.2vh);
 }
 
-
-h1,h2,h3,h4,h5,h6{
-	color:hsl(0, 0%, 30%);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: hsl(0, 0%, 30%);
 }
 
-.box-element{
-	box-shadow: var(--black) 0 0 1.6vh;
-	background-color: #fff;
-	padding: 2vh;
-	color: var(--black);
+.box-element {
+  box-shadow: var(--black) 0 0 1.6vh;
+  background-color: #fff;
+  padding: 2vh;
+  color: var(--black);
 }
 
-body.dark .box-element{
-	box-shadow:hsl(0, 0%, 100%) 0 0 1.6vh;
-	color: var(--black);
-	padding: 2vh;
+body.dark .box-element {
+  box-shadow: hsl(0, 0%, 100%) 0 0 1.6vh;
+  color: var(--black);
+  padding: 2vh;
 }
 
-.box-element.product{
-	border-radius: 0 0 2.5vh 2.5vh;
+.box-element.product {
+  border-radius: 0 0 2.5vh 2.5vh;
 }
 
-body.dark .box-element.product{
-	border-radius: 0 0 2.5vh 2.5vh;
+body.dark .box-element.product {
+  border-radius: 0 0 2.5vh 2.5vh;
 }
 
-.thumbnail{
-	width: 100%;
-	height: 20vh;
-	box-shadow:var(--black) 0 0 16px;
-	object-fit: cover;
-	border-radius: 2.5vh 2.5vh 0 0;
+.thumbnail {
+  width: 100%;
+  height: 20vh;
+  box-shadow: var(--black) 0 0 16px;
+  object-fit: cover;
+  border-radius: 2.5vh 2.5vh 0 0;
 }
 
-body.dark .thumbnail{
-	width: 100%;
-	height: 20vh;
-	box-shadow: var(--white) 0 0 16px;
-	object-fit: cover;
-	border-radius: 2.5vh 2.5vh 0 0;
+body.dark .thumbnail {
+  width: 100%;
+  height: 20vh;
+  box-shadow: var(--white) 0 0 16px;
+  object-fit: cover;
+  border-radius: 2.5vh 2.5vh 0 0;
 }
 
-.product{
-	border-radius: 0 0 0.4vh 0.4vh;
+.product {
+  border-radius: 0 0 0.4vh 0.4vh;
 }
 
-.bg-dark{
-	background-color: #4f868c!important;
+.bg-dark {
+  background-color: #4f868c !important;
 }
 
-#cart-icon{
-	width: 2.5vh;
-	display: inline-block;
-	margin-left: 1.5vh;
+#cart-icon {
+  width: 2.5vh;
+  display: inline-block;
+  margin-left: 1.5vh;
 }
 
-#cart-total{
-	display: block;
-	text-align: center;
-	color:#fff;
-	background-color: red;
-	width: 2vh;
-	height: 2.5vh;
-	border-radius: 50%;
-	font-size: 1.4vh;
+#cart-total {
+  display: block;
+  text-align: center;
+  color: #fff;
+  background-color: red;
+  width: 2vh;
+  height: 2.5vh;
+  border-radius: 50%;
+  font-size: 1.4vh;
 }
 
-.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
-	margin-top: 1vh;
+.col-lg-4,
+.col-lg-6,
+.col-lg-8,
+.col-lg-12 {
+  margin-top: 1vh;
 }
 
-.btn{
-	border-radius: 0;
+.btn {
+  border-radius: 0;
 }
 
-.row-image{
-	width: 10vh;
+.row-image {
+  width: 10vh;
 }
 
-.form-field{
-	width: 25vh;
-	display: inline-block;
-	padding: 0.5vh;
+.form-field {
+  width: 25vh;
+  display: inline-block;
+  padding: 0.5vh;
 }
 
-.cart-row{
-	display: flex;
-    align-items: flex-stretch;
-    padding-bottom: 1vh;
-    margin-bottom: 1vh;
-    border-bottom: 1px solid #ececec;
-
+.cart-row {
+  display: flex;
+  align-items: flex-stretch;
+  padding-bottom: 1vh;
+  margin-bottom: 1vh;
+  border-bottom: 1px solid #ececec;
 }
 
-
-.quantity{
-	display: inline-block;
-	font-weight: 700;
-	padding-right:1vh;
-	
-
+.quantity {
+  display: inline-block;
+  font-weight: 700;
+  padding-right: 1vh;
 }
 
-.chg-quantity{
-	width: 12px;
-	cursor: pointer;
-	display: block;
-	margin-top: 0.5vh;
-	transition:.1s;
+.chg-quantity {
+  width: 12px;
+  cursor: pointer;
+  display: block;
+  margin-top: 0.5vh;
+  transition: 0.1s;
 }
 
-.chg-quantity:hover{
-	opacity: .6;
+.chg-quantity:hover {
+  opacity: 0.6;
 }
 
-
-.hidden{
-	display: none!important;
+.hidden {
+  display: none !important;
 }
 
-.balance{
-	margin-top: 1vh;
-	margin-bottom: 2vh;
-	min-width: 250px;
+.balance {
+  margin-top: 1vh;
+  margin-bottom: 2vh;
+  min-width: 250px;
 }
 
-.rating{
-	font-size: 2.2vh;
-	float: right;
-	color: rgb(210, 178, 0);
-}
-  
-  .rating-star{
-	font-size: 2.3vh;
-	float: right;
-	color: rgb(210, 178, 0);
+.rating {
+  font-size: 2.2vh;
+  float: right;
+  color: rgb(210, 178, 0);
 }
 
-body.dark .rating{
-	font-size: 2.2vh;
-	float: right;
-	color: rgb(210, 178, 0);
+.rating-star {
+  font-size: 2.3vh;
+  float: right;
+  color: rgb(210, 178, 0);
 }
-  
-body.dark .rating-star{
-	font-size: 2.3vh;
-	float: right;
-	color: rgb(210, 178, 0);
+
+body.dark .rating {
+  font-size: 2.2vh;
+  float: right;
+  color: rgb(210, 178, 0);
+}
+
+body.dark .rating-star {
+  font-size: 2.3vh;
+  float: right;
+  color: rgb(210, 178, 0);
 }
 
 .register .panel-view {
-    z-index: 2;
-    background: rgba(255, 255, 255, 0.5);
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
+  z-index: 2;
+  background: rgba(255, 255, 255, 0.5);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
 }
-  
- .register .panel-view.active {
-    opacity: 1;
-    visibility: visible;
+
+.register .panel-view.active {
+  opacity: 1;
+  visibility: visible;
 }
 
 .active {
-	background-color: lightskyblue;
+  background-color: lightskyblue;
 }
 
 body.dark .active {
-	background-color: steelblue;
+  background-color: steelblue;
+}
+
+.popup {
+  width: 400px;
+  background-color: #fff;
+  border-radius: 6px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  box-shadow: var(--black) 0 0 16px;
+  z-index: 5;
+}
+
+.popup img {
+  width: 100px;
+  margin-top: -50px;
+  border-radius: 50%;
+  box-shadow: var(--black) 0 0 16px;
+}
+
+.popup h2 {
+  font-size: 38px;
+  font-weight: 500;
+  margin: 30px 0 10px;
+}
+
+.popup button {
+  width: 100%;
+  margin-top: 50px;
+  padding: 10px 0;
+  background: #6fd649;
+  color: #fff;
+  border: 0;
+  outline: none;
+  font-size: 18px;
+  border-radius: 4px;
+  cursor: pointer;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
 }
