--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,106 +1,79 @@
 {% extends 'store/main.html' %} {% load static %} {% block content %}
-<div class="row">
-  <div class="col-lg-6">
-    <div class="box-element" id="form-wrapper">
-      <form id="form">
-        <div id="user-info">
-          <div class="form-field">
-            <input
-              required
-              class="form-control"
-              type="text"
-              name="name"
-              placeholder="Name.."
-            />
+  <div class="row" id="checkoutContent">
+    <div class="col-lg-6">
+      <div class="box-element" id="form-wrapper">
+        <form id="form">
+          <div id="user-info">
+            <div class="form-field">
+              <input required class="form-control" type="text" name="name" placeholder="Name.." />
+            </div>
+            <div class="form-field">
+              <input required class="form-control" type="email" name="email" placeholder="Email.." />
+            </div>
           </div>
-          <div class="form-field">
-            <input
-              required
-              class="form-control"
-              type="email"
-              name="email"
-              placeholder="Email.."
-            />
-          </div>
-        </div>
 
-        <div id="shipping-info">
+          <div id="shipping-info">
+            <hr />
+            <p>Shipping Information:</p>
+            <hr />
+            <div class="form-field">
+              <input class="form-control" type="text" name="address" placeholder="Address.." />
+            </div>
+            <div class="form-field">
+              <input class="form-control" type="text" name="city" placeholder="City.." />
+            </div>
+            <div class="form-field">
+              <input class="form-control" type="text" name="state" placeholder="State.." />
+            </div>
+            <div class="form-field">
+              <input class="form-control" type="text" name="zipcode" placeholder="Zip code.." />
+            </div>
+          </div>
           <hr />
-          <p>Shipping Information:</p>
-          <hr />
-          <div class="form-field">
-            <input
-              class="form-control"
-              type="text"
-              name="address"
-              placeholder="Address.."
-            />
-          </div>
-          <div class="form-field">
-            <input
-              class="form-control"
-              type="text"
-              name="city"
-              placeholder="City.."
-            />
-          </div>
-          <div class="form-field">
-            <input
-              class="form-control"
-              type="text"
-              name="state"
-              placeholder="State.."
-            />
-          </div>
-          <div class="form-field">
-            <input
-              class="form-control"
-              type="text"
-              name="zipcode"
-              placeholder="Zip code.."
-            />
-          </div>
-        </div>
-        <hr />
-        <input
-          id="form-button"
-          class="btn btn-success btn-block"
-          type="submit"
-          value="Continue"
-        />
-      </form>
+          <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue" />
+        </form>
+      </div>
+
+      <br />
+      <div class="box-element hidden" id="payment-info">
+        <small>Paypal Options</small>
+        <button id="make-payment">Fizetés</button>
+      </div>
     </div>
 
-    <br />
-    <div class="box-element hidden" id="payment-info">
-      <small>Paypal Options</small>
-      <button id="make-payment">Fizetés</button>
+    <div class="col-lg-6">
+      <div class="box-element">
+        <a class="btn btn-outline-dark" href="{% url 'cart' %}">&#x2190; Vissza a kosárhoz</a>
+        <hr />
+        <h3>Rendelés összegzése</h3>
+        <hr />
+        {% for item in items %}
+        <div class="cart-row">
+          <div style="flex: 2">
+            <img class="row-image" src="{{item.product.imageURL}}" />
+          </div>
+          <div style="flex: 2">
+            <p>{{item.product.name}}</p>
+          </div>
+          <div style="flex: 1">
+            <p>{{item.product.price|floatformat:0}} Ft</p>
+          </div>
+          <div style="flex: 1">
+            <p>{{item.quantity}} db</p>
+          </div>
+        </div>
+        {% endfor %}
+        <h5>Termékek: {{order.get_cart_items}} db</h5>
+        <h5>Végösszeg: {{order.get_cart_total|floatformat:0}} Ft</h5>
+      </div>
     </div>
   </div>
 
-  <div class="col-lg-6">
-    <div class="box-element">
-      <a class="btn btn-outline-dark" href="{% url 'cart' %}"
-        >&#x2190; Vissza a kosárhoz</a
-      >
-      <hr />
-      <h3>Rendelés összegzése</h3>
-      <hr />
-      {% for item in items %}
-      <div class="cart-row">
-        <div style="flex: 2">
-          <img class="row-image" src="{{item.product.imageURL}}" />
-        </div>
-        <div style="flex: 2"><p>{{item.product.name}}</p></div>
-        <div style="flex: 1">
-          <p>{{item.product.price|floatformat:0}} Ft</p>
-        </div>
-        <div style="flex: 1"><p>{{item.quantity}} db</p></div>
-      </div>
-      {% endfor %}
-      <h5>Termékek: {{order.get_cart_items}} db</h5>
-      <h5>Végösszeg: {{order.get_cart_total|floatformat:0}} Ft</h5>
-    </div>
+  <div class="popup hidden" id="popup">
+    <img src="{% static 'images/tick.png' %}" />
+    <h2>Köszönjük</h2>
+    <p>Sikeresen megrendelted a kiválasztott termékeket</p>
+    <button id="popupClose">OK</button>
   </div>
 
   <script>
@@ -124,16 +97,24 @@
     var form = document.getElementById("form");
     form.addEventListener("submit", function (e) {
       e.preventDefault();
-      console.log("Sikeres rendelés");
       document.getElementById("form-button").classList.add("hidden");
       document.getElementById("payment-info").classList.remove("hidden");
     });
 
-    document
-      .getElementById("make-payment")
-      .addEventListener("click", function (e) {
+    document.getElementById("make-payment").addEventListener("click", function (e) {
+        flashMessage(); 
+      });
+
+    function flashMessage() {
+      document.getElementById("checkoutContent").classList.add("hidden");
+      document.getElementById("popup").classList.remove("hidden");
+      var popupClose = document.getElementById("popupClose");
+
+      popupClose.addEventListener("click", function () {
+        document.getElementById("popup").classList.add("hidden");
         submitFormData();
       });
+    }
 
     function submitFormData() {
       var userFormData = {
@@ -161,22 +142,19 @@
         shippingInfo.email = form.email.value;
       }
 
-      var url = '/process_order/'
-      fetch(url,{
-        method:'POST',
-        headers:{
-          'Content-Type':'application/json',
-          'X-CSRFToken':csrftoken,
+      var url = "/process_order/";
+      fetch(url, {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json",
+          "X-CSRFToken": csrftoken,
         },
-        body:JSON.stringify({'form':userFormData, 'shipping':shippingInfo})
+        body: JSON.stringify({ form: userFormData, shipping: shippingInfo }),
       })
-      .then((response) => response.json())
-      .then((data) => {
-        console.log('Siker:', data);
-        alert('Sikeres tranzakció');
-        window.location.href = "{% url 'store' %}"
-      })
-
+        .then((response) => response.json())
+        .then((data) => {
+          window.location.href = "{% url 'store' %}";
+        });
     }
   </script>
 
