--- a/static/css/main-page.css
+++ b/static/css/main-page.css
@@ -470,7 +470,7 @@ body.dark .active {
   width: 400px;
   background-color: #fff;
   border-radius: 6px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
