--- a/static/css/main-page.css
+++ b/static/css/main-page.css
@@ -470,7 +470,7 @@ body.dark .active {
   width: 400px;
   background-color: #fff;
   border-radius: 6px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -532,6 +532,17 @@ body.dark #pname,
   to {
     opacity: 1;
     scale: 1;
+  }
+}
+
+@keyframes closePopupAnimation {
+  from {
+    opacity: 1;
+    scale: 1;
+  }
+  to {
+    opacity: 0;
+    scale: 0.5;
   }
 }
 
