--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -4,33 +4,43 @@
       <div class="box-element" id="form-wrapper">
         <form id="form">
           <div id="user-info">
+            <p>Személyes adatok</p>
+            <hr/>
             <div class="form-field">
-              <input required class="form-control" type="text" name="name" placeholder="Name.." />
+              <input required class="form-control" type="text" name="lastname" placeholder="Vezetéknév" />
             </div>
             <div class="form-field">
-              <input required class="form-control" type="email" name="email" placeholder="Email.." />
+              <input required class="form-control" type="text" name="firstname" placeholder="Keresztnév" />
             </div>
+            <div class="form-field">
+              <input required class="form-control" type="email" name="email" placeholder="Email cím" />
+            </div>
+            <br><br>
           </div>
+          
 
-          <div id="shipping-info">
-            <hr />
-            <p>Shipping Information:</p>
-            <hr />
+          <div id="shipping-info">     
+            <p>Szállítási adatok</p>
+            <hr/>
             <div class="form-field">
-              <input class="form-control" type="text" name="address" placeholder="Address.." />
+              <input required class="form-control" type="tel" name="phonenumber" placeholder="Telefonszám" />
+            </div>
+            <hr>
+            <div class="form-field">
+              <input class="form-control" type="text" name="zipcode" placeholder="Irányítószám" />
             </div>
             <div class="form-field">
-              <input class="form-control" type="text" name="city" placeholder="City.." />
+              <input class="form-control" type="text" name="city" placeholder="Település" />
             </div>
             <div class="form-field">
-              <input class="form-control" type="text" name="state" placeholder="State.." />
+              <input class="form-control" type="text" name="state" placeholder="Megye" />
             </div>
             <div class="form-field">
-              <input class="form-control" type="text" name="zipcode" placeholder="Zip code.." />
-            </div>
+              <input class="form-control" type="text" name="address" placeholder="Cím" />
+            </div>          
           </div>
           <hr />
-          <input id="form-button" class="btn btn-success btn-block" type="submit" value="Continue" />
+          <input id="form-button" class="btn btn-success btn-block" type="submit" value="Folytatás" />
         </form>
       </div>
 
@@ -148,8 +158,8 @@
       }
 
       if (user == "AnonymousUser") {
-        shippingInfo.name = form.name.value;
-        shippingInfo.email = form.email.value;
+        userFormData.name = form.lastname.value + " " + form.firstname.value;
+        userFormData.email = form.email.value;  
       }
 
       var url = "/process_order/";
@@ -159,11 +169,15 @@
           "Content-Type": "application/json",
           "X-CSRFToken": csrftoken,
         },
-        body: JSON.stringify({ form: userFormData, shipping: shippingInfo }),
+        body:JSON.stringify({form: userFormData, shipping: shippingInfo}),
       })
         .then((response) => response.json())
         .then((data) => {
-          window.location.href = "{% url 'store' %}";
+
+        cart = {}
+        document.cookie ='cart=' + JSON.stringify(cart) + ';domain=;path=/'
+
+        window.location.href = "{% url 'store' %}";
         });
     }
   </script>
