--- a/store/templates/store/register.html
+++ b/store/templates/store/register.html
@@ -52,10 +52,11 @@
                         {{form.password2}}
                     </div>
 
-                       <div class="d-flex justify-content-center mt-3 login_container">
-                         <input class="btn login_btn" type="submit" value="Regisztráció">
-                       </div>
+                    <div class="d-flex justify-content-center mt-3 login_container">
+                        <input class="btn login_btn" type="submit" value="Regisztráció">
+                    </div>
                 </form>
+                <div>{{form.errors}}</div>
             </div>
 
             <div class="mt-4">
