--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,5 +1,6 @@
 {% extends 'store/main.html' %}
 {% load static %}
+{% load humanize %}
 {% block content %}
 <div class="row">
 	<div class="col-lg-12">
@@ -10,7 +11,7 @@
                <table class="table">
                     <tr>
                          <th><h5>Termékek: <strong>{{order.get_cart_items}}</strong></h5></th>
-                         <th><h5>Végösszeg: <strong>{{order.get_cart_total}} Ft</strong></h5></th>
+                         <th><h5>Végösszeg: <strong>{{order.get_cart_total|intcomma}} Ft</strong></h5></th>
                          <th>
                               <a  style="float:right; margin:5px; border-radius: 15px;" class="btn btn-success" id="toCheckout" href="{% url 'checkout' %}">Fizetés</a>
                          </th>
@@ -33,7 +34,7 @@
                <div class="cart-row">
                     <div style="flex:2"><img class="row-image" src="{{item.product.imageURL}}"></div>
                     <div style="flex:2"><p>{{item.product.pname}}</p></div>
-                    <div style="flex:1"><p>{{item.product.price|floatformat:0}} Ft</p></div>
+                    <div style="flex:1"><p>{{item.product.price|floatformat:0|intcomma}} Ft</p></div>
                     <div style="flex:1">
                          <p class="quantity">{{item.quantity}}</p>
                          <div class="quantity">
@@ -42,7 +43,7 @@
                               <img data-product="{{item.product.id}}" data-action="remove" class="chg-quantity update-cart" src="{% static  'images/arrow-down.png' %}">
                          </div>
                     </div>
-                    <div style="flex:1"><p>{{item.get_total|floatformat:0}} Ft</p></div>
+                    <div style="flex:1"><p>{{item.get_total|floatformat:0|intcomma}} Ft</p></div>
                </div>
                {% endfor %}
 	</div>
