--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -1,4 +1,7 @@
-{% extends 'store/main.html' %} {% load static %} {% block content %}
+{% extends 'store/main.html' %}
+{% load static %}
+{% load humanize %}
+{% block content %}
   <div class="row" id="checkoutContent">
     <div class="col-lg-6">
       <div class="box-element" id="form-wrapper">
@@ -69,7 +72,7 @@
             <p>{{item.product.name}}</p>
           </div>
           <div style="flex: 1">
-            <p>{{item.product.price|floatformat:0}} Ft</p>
+            <p>{{item.product.price|floatformat:0|intcomma}} Ft</p>
           </div>
           <div style="flex: 1">
             <p>{{item.quantity}} db</p>
@@ -77,7 +80,7 @@
         </div>
         {% endfor %}
         <h5>Termékek: {{order.get_cart_items}} db</h5>
-        <h5>Végösszeg: {{order.get_cart_total|floatformat:0}} Ft</h5>
+        <h5>Végösszeg: {{order.get_cart_total|floatformat:0|intcomma}} Ft</h5>
       </div>
     </div>
   </div>
