--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,5 +1,6 @@
 {% extends 'store/main.html' %}
 {% load static %}
+{% load humanize %}
 {% block content %}
 <div id="formContent">
 <form method="GET" action=".">
@@ -68,8 +69,9 @@
 
 
 
-<div class="row" style="margin-top: 100px;">
+<div class="row" style="margin-top: 100px;" id="lightStore">
   {% for product in products %}
+  {% if product.darkweb == False %}
     <div class="col-lg-4 col-md-6 col-sm-12 balance">
       <img class="thumbnail" src="{{ product.imageURL }}" />
       <div class="box-element product">
@@ -83,12 +85,39 @@
         <hr>
         <h6 style="font-size: small; height: 30px;">{{ product.description }}</h6>
         <hr>
-        <h4><strong>{{ product.price|floatformat:0 }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span></h4>
+        <h4><strong>{{ product.price|floatformat:0|intcomma }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span></h4>
         
         <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart" role="button">Kosárba</button>
-        <button class="button-33 view" role="button" onclick="openQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0 }} Ft', '{{ product.rating }}')">Megtekint</button>
+        <button class="button-33 view" role="button" onclick="openQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
       </div>
     </div>
+  {% endif %}
+  {% endfor %}
+</div>
+
+<div class="row hidden" style="margin-top: 100px;" id="darkStore">
+  {% for product in products %}
+  {% if product.darkweb == True %}
+    <div class="col-lg-4 col-md-6 col-sm-12 balance">
+      <img class="thumbnail" src="{{ product.imageURL }}" />
+      <div class="box-element product">
+        <h5><strong>{{ product.pname }}</strong></h5>
+        <h6 style="font-size: smaller;"><strong>{{ product.brand.name }}&nbsp;|&nbsp;
+          {% for category in product.category.all %}
+            {{ category }}
+          {% endfor %}
+          &nbsp;|&nbsp;
+        </strong></h6>
+        <hr>
+        <h6 style="font-size: small; height: 30px;">{{ product.description }}</h6>
+        <hr>
+        <h4><strong>{{ product.price|floatformat:0|intcomma }} Ft</strong><i class='bx bx-star rating-star'></i><span class="rating">{{ product.rating }}</span></h4>
+        
+        <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart" role="button">Kosárba</button>
+        <button class="button-33 view" role="button" onclick="openQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
+      </div>
+    </div>
+  {% endif %}
   {% endfor %}
 </div>
 </div>
@@ -129,8 +158,6 @@
     document.getElementById('csiresz').classList.remove('active');
   }
 </script>
-
-
 
 
 {% endblock content %}
