--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -91,6 +91,19 @@
         <button class="button-33 view" role="button" onclick="openQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
       </div>
     </div>
+    <div id="csiresz" class="popup-view">
+      <div class="cardstore popup-card">
+        <a onclick="closeQuickView()"><i class="fas fa-times close-btn"></i></a>
+        <div class="cardstore-img">
+          <img id="quick-view-image" src="" alt="">
+        </div>
+        <div class="infók">
+          <h2 id="quick-view-name"></h2>
+          <p id="quick-view-details"></p>
+          <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart quickview" role="button">Kosárba</button>
+        </div>
+      </div>
+    </div>
   {% endif %}
   {% endfor %}
 </div>
@@ -117,25 +130,26 @@
         <button class="button-33 view" role="button" onclick="openQuickView('{{ product.imageURL }}', '{{ product.pname }}', '{{ product.brand.name }}', '{% for category in product.category.all %}{{ category }}{% endfor %}', '{{ product.description }}', '{{ product.price|floatformat:0|intcomma }} Ft', '{{ product.rating }}')">Megtekint</button>
       </div>
     </div>
+    <div id="csiresz" class="popup-view">
+      <div class="cardstore popup-card">
+        <a onclick="closeQuickView()"><i class="fas fa-times close-btn"></i></a>
+        <div class="cardstore-img">
+          <img id="quick-view-image" src="" alt="">
+        </div>
+        <div class="infók">
+          <h2 id="quick-view-name"></h2>
+          <p id="quick-view-details"></p>
+          <button data-product="{{ product.id }}" data-action="add" class="button-33 add-to-cart update-cart quickview" role="button">Kosárba</button>
+        </div>
+      </div>
+    </div>
   {% endif %}
   {% endfor %}
 </div>
 </div>
 
 <!-- Quick View Popup HTML -->
-<div id="csiresz" class="popup-view">
-  <div class="cardstore popup-card">
-    <a onclick="closeQuickView()"><i class="fas fa-times close-btn"></i></a>
-    <div class="cardstore-img">
-      <img id="quick-view-image" src="" alt="">
-    </div>
-    <div class="infók">
-      <h2 id="quick-view-name"></h2>
-      <p id="quick-view-details"></p>
-      <button data-product="{{ product.id }}" data-action="add" class="button-33 Kosárba add-to-cart update-cart" role="button">Kosárba</button>
-    </div>
-  </div>
-</div>
+
 
 <div class="popup" id="popup">
   <img src="{% static 'images/tick.png' %}" />
